test/e2e/alcotest/failing/unknown_option.ml
let () =
  Alcotest.run "unknown_option"
    [ ("alpha", [ Alcotest.test_case "1" `Quick (fun () -> ()) ]) ]
